--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     },
     "dependencies": {
         "@react-native-community/async-storage": "^1.6.2",
+        "@react-native-community/push-notification-ios": "^1.0.2",
         "apollo-boost": "^0.4.4",
         "date-streaks": "^1.1.6",
         "graphql": "^14.5.8",
         "moment": "^2.24.0",
         "react": "16.9.0",
         "react-apollo": "^3.1.1",
-        "react-native": "0.61.1",
+        "react-native": "0.61.2",
         "react-native-animatable": "^1.3.2",
         "react-native-calendars": "^1.212.0",
         "react-native-device-info": "^3.1.4",
