--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "react-navigation-stack": "^1.9.3",
         "react-navigation-tabs": "^2.5.5",
         "shuffle-seed": "^1.1.6",
+        "top-level-await": "^1.1.0",
         "unstated": "^2.1.1"
     },
     "devDependencies": {
