--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,6 +37,8 @@ target 'ReflectApp' do
 
   pod 'RNCPushNotificationIOS', :path => '../node_modules/@react-native-community/push-notification-ios'
 
+  pod 'react-native-appearance', :path => '../node_modules/react-native-appearance'
+
   target 'ReflectAppTests' do
     inherit! :search_paths
     # Pods for testing
