--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     },
     "dependencies": {
         "@react-native-community/async-storage": "^1.6.2",
+        "@react-native-community/datetimepicker": "^2.1.0",
+        "@react-native-community/picker": "^1.1.3",
         "@react-native-community/push-notification-ios": "^1.0.2",
         "apollo-boost": "^0.4.4",
         "date-streaks": "^1.1.6",
@@ -20,6 +22,7 @@
         "react-apollo": "^3.1.1",
         "react-native": "0.61.2",
         "react-native-animatable": "^1.3.2",
+        "react-native-appearance": "^0.3.2",
         "react-native-calendars": "^1.212.0",
         "react-native-device-info": "^3.1.4",
         "react-native-emoji-selector": "^0.1.7",
@@ -28,7 +31,7 @@
         "react-native-linear-gradient": "^2.5.6",
         "react-native-local-mongodb": "^2.2.9",
         "react-native-mixpanel": "^1.1.4",
-        "react-native-modal-datetime-picker": "^7.6.0",
+        "react-native-modal-datetime-picker": "8.x.x",
         "react-native-purchases": "^2.4.1",
         "react-native-push-notification": "^3.1.9",
         "react-native-reanimated": "^1.3.0",
