--- a/ios/ReflectApp/Info.plist
+++ b/ios/ReflectApp/Info.plist
@@ -22,6 +22,19 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+  <key>CFBundleURLTypes</key>
+  <array>
+    <dict>
+    <key>CFBundleURLSchemes</key>
+    <array>
+      <string>fb504815840167763</string>
+    </array>
+    </dict>
+  </array>
+  <key>FacebookAppID</key>
+  <string>504815840167763</string>
+  <key>FacebookDisplayName</key>
+  <string>Reflect</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
