--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@react-native-community/datetimepicker": "^2.1.0",
         "@react-native-community/picker": "^1.1.3",
         "@react-native-community/push-notification-ios": "^1.0.2",
+        "@sentry/react-native": "^1.2.1",
         "apollo-boost": "^0.4.4",
         "date-streaks": "^1.1.6",
         "graphql": "^14.5.8",
