--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@sentry/react-native": "^1.2.1",
         "apollo-boost": "^0.4.4",
         "date-streaks": "^1.1.6",
+        "formik": "^2.1.4",
         "graphql": "^14.5.8",
         "moment": "^2.24.0",
         "react": "16.9.0",
