--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@react-native-community/picker": "^1.1.3",
         "@react-native-community/push-notification-ios": "^1.0.2",
         "@react-native-firebase/app": "^6.3.4",
+        "@react-native-firebase/auth": "^6.3.4",
         "@sentry/react-native": "^1.2.1",
         "apollo-boost": "^0.4.4",
         "date-streaks": "^1.1.6",
@@ -46,6 +47,7 @@
         "react-navigation-stack": "^1.9.3",
         "react-navigation-tabs": "^2.5.5",
         "react-navigation-transitions": "^1.0.12",
+        "reactn": "^2.2.6",
         "shuffle-seed": "^1.1.6",
         "top-level-await": "^1.1.0",
         "unstated": "^2.1.1"
