--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@react-native-community/async-storage": "^1.6.2",
         "@react-native-community/datetimepicker": "^2.1.0",
+        "@react-native-community/google-signin": "^3.0.4",
         "@react-native-community/picker": "^1.1.3",
         "@react-native-community/push-notification-ios": "^1.0.2",
         "@react-native-firebase/app": "^6.3.4",
