--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
         "@sentry/react-native": "^1.2.1",
         "apollo-boost": "^0.4.4",
         "date-streaks": "^1.1.6",
+        "emoji-datasource": "^5.0.1",
+        "emoji-datasource-apple": "^5.0.1",
+        "emoji-mart-native": "^0.5.0-beta",
         "formik": "^2.1.4",
         "graphql": "^14.5.8",
         "moment": "^2.24.0",
@@ -30,7 +33,7 @@
         "react-native-appearance": "^0.3.2",
         "react-native-calendars": "^1.212.0",
         "react-native-device-info": "^3.1.4",
-        "react-native-emoji-selector": "^0.1.7",
+        "react-native-emoji-selector": "^0.1.8",
         "react-native-fbsdk": "^1.1.1",
         "react-native-gesture-handler": "^1.4.1",
         "react-native-keyboard-aware-scroll-view": "^0.9.1",
@@ -42,6 +45,7 @@
         "react-native-push-notification": "^3.1.9",
         "react-native-reanimated": "^1.3.0",
         "react-native-snap-carousel": "^3.8.1",
+        "react-native-super-grid": "^3.1.2",
         "react-native-vector-icons": "^6.6.0",
         "react-native-webview": "^7.2.7",
         "react-navigation": "^4.0.10",
