--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "@react-native-community/eslint-config": "^0.0.5",
         "babel-jest": "^24.9.0",
         "babel-plugin-module-resolver": "^3.2.0",
+        "babel-plugin-transform-remove-console": "^6.9.4",
         "eslint": "^6.5.1",
         "eslint-config-universe": "^2.0.0",
         "jest": "^24.9.0",
