--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "emulators": "cd web && yarn emulators"
     },
     "dependencies": {
+        "@apollo/react-hooks": "^3.1.3",
         "@react-native-community/async-storage": "^1.6.2",
         "@react-native-community/datetimepicker": "^2.2.2",
         "@react-native-community/google-signin": "^3.0.4",
