--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "react-native-push-notification": "^3.1.9",
         "react-native-reanimated": "^1.3.0",
         "react-native-snap-carousel": "^3.8.1",
+        "react-native-splash-screen": "^3.2.0",
         "react-native-super-grid": "^3.1.2",
         "react-native-vector-icons": "^6.6.0",
         "react-native-webview": "^7.2.7",
@@ -65,6 +66,7 @@
     "devDependencies": {
         "@babel/core": "^7.6.2",
         "@babel/runtime": "^7.6.2",
+        "@bam.tech/react-native-make": "^2.0.0",
         "@react-native-community/eslint-config": "^0.0.5",
         "babel-jest": "^24.9.0",
         "babel-plugin-module-resolver": "^3.2.0",
