--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,6 +136,9 @@ android {
         versionName "1.1"
         multiDexEnabled = true
     }
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
     splits {
         abi {
             reset()
