--- a/ios/ReflectApp.xcodeproj/xcshareddata/xcschemes/ReflectApp.xcscheme
+++ b/ios/ReflectApp.xcodeproj/xcshareddata/xcschemes/ReflectApp.xcscheme
@@ -97,6 +97,12 @@
             ReferencedContainer = "container:ReflectApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRAnalyticsDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
