--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@react-native-community/google-signin": "^3.0.4",
         "@react-native-community/picker": "^1.1.3",
         "@react-native-community/push-notification-ios": "^1.0.2",
+        "@react-native-firebase/analytics": "^6.3.4",
         "@react-native-firebase/app": "^6.3.4",
         "@react-native-firebase/auth": "^6.3.4",
         "@react-native-firebase/firestore": "^6.3.4",
