--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,5 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx2560m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
