Created collection models with new firestore pattern

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "date-streaks": "^1.1.6",
         "formik": "^2.1.4",
         "graphql": "^14.5.8",
+        "lodash-es": "^4.17.15",
         "moment": "^2.24.0",
         "react": "16.9.0",
         "react-apollo": "^3.1.1",
@@ -64,11 +65,13 @@
         "@babel/runtime": "^7.6.2",
         "@bam.tech/react-native-make": "^2.0.0",
         "@react-native-community/eslint-config": "^0.0.5",
+        "@typescript-eslint/eslint-plugin": "^2.24.0",
         "babel-jest": "^24.9.0",
         "babel-plugin-module-resolver": "^3.2.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
         "eslint": "^6.5.1",
         "eslint-config-universe": "^2.0.0",
+        "flow-bin": "^0.105.0",
         "jest": "^24.9.0",
         "metro-react-native-babel-preset": "^0.56.0",
         "prettier": "^1.18.2",
