--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-native-linear-gradient": "^2.5.6",
         "react-native-local-mongodb": "^2.2.9",
         "react-native-mixpanel": "^1.1.4",
+        "react-native-modal": "^11.5.6",
         "react-native-modal-datetime-picker": "8.x.x",
         "react-native-purchases": "^2.4.1",
         "react-native-push-notification": "^3.1.9",
