reset and move over

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,9 +132,12 @@ android {
         applicationId "com.reflectapp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 2
-        versionName "1.1"
+        versionCode 5
+        versionName "1.2"
         multiDexEnabled = true
+    }
+    dexOptions {
+        javaMaxHeapSize "4g"
     }
     splits {
         abi {
@@ -151,6 +154,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('release.keystore')
+            storePassword '#Shred12'
+            keyAlias 'upload'
+            keyPassword '#Shred12'
+        }
     }
     buildTypes {
         debug {
@@ -159,7 +168,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://facebook.github.io/react-native/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
@@ -181,9 +190,6 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-fbsdk')
-    implementation project(':react-native-appearance')
-    implementation project(':react-native-push-notification')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
