--- a/package.json
+++ b/package.json
@@ -20,14 +20,10 @@
         "@react-native-firebase/app": "^6.3.4",
         "@react-native-firebase/auth": "^6.3.4",
         "@react-native-firebase/firestore": "^6.3.4",
-        "@react-native-firebase/functions": "^6.3.4",
         "@sentry/react-native": "^1.2.1",
         "apollo-boost": "^0.4.4",
         "babel-plugin-transform-inline-environment-variables": "^0.4.3",
         "date-streaks": "^1.1.6",
-        "emoji-datasource": "^5.0.1",
-        "emoji-datasource-apple": "^5.0.1",
-        "emoji-mart-native": "^0.5.0-beta",
         "formik": "^2.1.4",
         "graphql": "^14.5.8",
         "lodash-es": "^4.17.15",
@@ -51,6 +47,7 @@
         "react-native-push-notification": "^3.1.9",
         "react-native-reanimated": "^1.3.0",
         "react-native-snap-carousel": "^3.8.1",
+        "react-native-splash-screen": "^3.2.0",
         "react-native-super-grid": "^3.1.2",
         "react-native-vector-icons": "^6.6.0",
         "react-native-webview": "^7.2.7",
@@ -64,8 +61,11 @@
         "unstated": "^2.1.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.6.2",
+        "@babel/cli": "^7.8.4",
+        "@babel/core": "^7.9.0",
+        "@babel/preset-flow": "^7.9.0",
         "@babel/runtime": "^7.6.2",
+        "@bam.tech/react-native-make": "^2.0.0",
         "@react-native-community/eslint-config": "^0.0.5",
         "@typescript-eslint/eslint-plugin": "^2.24.0",
         "babel-jest": "^24.9.0",
@@ -73,7 +73,7 @@
         "babel-plugin-transform-remove-console": "^6.9.4",
         "eslint": "^6.5.1",
         "eslint-config-universe": "^2.0.0",
-        "flow-bin": "^0.105.0",
+        "flow-bin": "^0.121.0",
         "jest": "^24.9.0",
         "metro-react-native-babel-preset": "^0.56.0",
         "prettier": "^1.18.2",
