--- a/.flowconfig
+++ b/.flowconfig
@@ -34,6 +34,9 @@ module.file_ext=.js
 module.file_ext=.json
 module.file_ext=.ios.js
 
+module.system.node.resolve_dirname=node_modules
+module.system.node.resolve_dirname=App
+
 munge_underscores=true
 
 module.name_mapper='^react-native$' -> '<PROJECT_ROOT>/node_modules/react-native/Libraries/react-native/react-native-implementation'
