--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
         "local": "LOCAL=true react-native start",
         "test": "jest",
         "lint": "eslint .",
+        "postinstall": "patch-package",
         "emulators": "cd web && yarn emulators"
     },
     "dependencies": {
         "@react-native-community/async-storage": "^1.6.2",
         "@react-native-community/datetimepicker": "^2.2.2",
         "@react-native-community/google-signin": "^3.0.4",
-        "@react-native-community/picker": "^1.1.3",
         "@react-native-community/push-notification-ios": "^1.0.2",
         "@react-native-firebase/app": "^6.3.4",
         "@react-native-firebase/auth": "^6.3.4",
@@ -28,6 +28,8 @@
         "graphql": "^14.5.8",
         "lodash-es": "^4.17.15",
         "moment": "^2.24.0",
+        "patch-package": "^6.2.1",
+        "postinstall-postinstall": "^2.0.0",
         "react": "16.9.0",
         "react-apollo": "^3.1.1",
         "react-native": "0.61.2",
