--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
         "react-native-snap-carousel": "^3.8.1",
         "react-native-splash-screen": "^3.2.0",
         "react-native-super-grid": "^3.1.2",
+        "react-native-svg": "^12.0.3",
+        "react-native-svg-charts": "^5.3.0",
         "react-native-vector-icons": "^6.6.0",
         "react-native-webview": "^7.2.7",
         "react-navigation": "^4.0.10",
