--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-native": "0.61.2",
         "react-native-animatable": "^1.3.3",
         "react-native-appearance": "^0.3.2",
+        "react-native-appstate-hook": "^1.0.3",
         "react-native-calendars": "^1.212.0",
         "react-native-device-info": "^3.1.4",
         "react-native-emoji-selector": "^0.1.8",
@@ -49,6 +50,7 @@
         "react-native-purchases": "^2.4.1",
         "react-native-push-notification": "^3.1.9",
         "react-native-reanimated": "^1.3.0",
+        "react-native-smooth-pincode-input": "^1.0.9",
         "react-native-snap-carousel": "^3.8.1",
         "react-native-splash-screen": "^3.2.0",
         "react-native-super-grid": "^3.1.2",
