--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "react-native-reanimated": "^1.3.0",
         "react-native-smooth-pincode-input": "^1.0.9",
         "react-native-snap-carousel": "^3.8.1",
+        "react-native-spinkit": "^1.5.0",
         "react-native-splash-screen": "^3.2.0",
         "react-native-super-grid": "^3.1.2",
         "react-native-svg": "^12.0.3",
