--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "react-native-snap-carousel": "^3.8.1",
         "react-native-spinkit": "^1.5.0",
         "react-native-splash-screen": "^3.2.0",
+        "react-native-store-review": "^0.1.5",
         "react-native-super-grid": "^3.1.2",
         "react-native-svg": "^12.0.3",
         "react-native-svg-charts": "^5.3.0",
