--- a/ios/ReflectApp/Info.plist
+++ b/ios/ReflectApp/Info.plist
@@ -99,5 +99,15 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>facebook</string>
+		<string>whatsapp</string>
+		<string>twitter</string>
+		<string>googleplus</string>
+		<string>instagram</string>
+		<string>instagram-stories</string>
+		<string>email</string>
+	</array>
 </dict>
 </plist>
