--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "react-native-purchases": "^2.4.1",
         "react-native-push-notification": "^3.1.9",
         "react-native-reanimated": "^1.3.0",
+        "react-native-share": "^3.1.2",
         "react-native-smooth-pincode-input": "^1.0.9",
         "react-native-snap-carousel": "^3.8.1",
         "react-native-spinkit": "^1.5.0",
