--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "react-native-super-grid": "^3.1.2",
         "react-native-svg": "^12.0.3",
         "react-native-svg-charts": "^5.3.0",
+        "react-native-switch": "^1.5.0",
         "react-native-vector-icons": "^6.6.0",
         "react-native-webview": "^7.2.7",
         "react-navigation": "^4.0.10",
