Track with pre-defined and custom GA events

--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>581167811549-2qi5ih06ub4s3ndkbhbfl4n5gcsjp04k.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.581167811549-2qi5ih06ub4s3ndkbhbfl4n5gcsjp04k</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>581167811549-3s0rq83q7709nf0ldgcldp24l042t3os.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCgJJqvVEKWVc6080dFJKGHyw7apNURSl0</string>
 	<key>GCM_SENDER_ID</key>
