--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "@react-native-firebase/app": "^6.4.0",
         "@react-native-firebase/auth": "^6.4.0",
         "@react-native-firebase/firestore": "^6.4.0",
+        "@react-native-firebase/in-app-messaging": "^6.4.0",
+        "@react-native-firebase/messaging": "^6.4.0",
         "@sentry/react-native": "^1.2.1",
         "apollo-boost": "^0.4.4",
         "babel-plugin-transform-inline-environment-variables": "^0.4.3",
