--- a/web/functions/package.json
+++ b/web/functions/package.json
@@ -10,13 +10,12 @@
     },
     "dependencies": {
         "firebase-admin": "^8.6.0",
-        "firebase-functions": "^3.3.0"
+        "firebase-functions": "^3.3.0",
+        "lodash": "^4.17.15",
+        "moment": "^2.24.0"
     },
     "devDependencies": {
         "firebase-functions-test": "^0.1.6"
     },
-    "private": true,
-    "engines": {
-        "node": "10"
-    }
+    "private": true
 }
